modules/security_groups/main.tf
# Create a security  group for production nodes to allow traffic 
resource "aws_security_group" "EC2_sg" {
  name        = "EC2-instances-sg"
  description = "allow inbound traffic on port 22 and 9090"
  vpc_id      = var.vpc_id
 
  # dynamic block who create two rules to allow inbound traffic 
  dynamic "ingress" {
    for_each = var.inbound_ports_ec2
    content {
      from_port   = ingress.value
      to_port     = ingress.value
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  }
 
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}
 
# Create a security  group for database to allow traffic on port 3306 and from ec2 production security group
resource "aws_security_group" "database_sg" {
  name        = "database-sg"
  description = "security group for database to allow traffic on port 3306 and from ec2 security group"
  vpc_id      = var.vpc_id
 
  ingress {
    description     = "Allow traffic from port 3306 and from ec2 production security group"
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.EC2_sg.id]
  }
 
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
}
 
# EFS volume security group
resource "aws_security_group" "efs_sg" {
  name        = "efs security group"
  description = "Allow EFS PORT"
  vpc_id      =  var.vpc_id
  ingress {
    description     = "EFS mount target"
    from_port       = 2049
    to_port         = 2049
    protocol        = "tcp"
    cidr_blocks     = ["0.0.0.0/0"]
    security_groups = [aws_security_group.EC2_sg.id]
  }
 
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
